# demo-data-processing-speed-tests

./: .gitignore  README.md
app/: Makefile  notebook.ipynb  pyproject.toml
